changes to index.html

--- a/index.html
+++ b/index.html
@@ -122,7 +122,10 @@
         content, and presentation.
       </p>
       <div class="author">
-        <img src="assets/images/image-avatar.jpg" alt="Author Image" />
+        <img
+          src="Blog Preview Card/assets/images/image-avatar.jpg"
+          alt="Author Image"
+        />
         <div class="name">Greg Hooper</div>
       </div>
     </div>
