changes in html

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         content, and presentation.
       </p>
       <div class="author">
-        <img src="./assets/images/image-avatar.webp" alt="Author Image" />
+        <img src="../assets/images/image-avatar.webp" alt="Author Image" />
         <div class="name">Greg Hooper</div>
       </div>
     </div>
